--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /* ==============================================
    KHRYSALIDE - Feuille de styles principale
+   Version: 1.0.1
    ============================================== */
 
 /* ==============================================
